--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="large">
             <div class="container">
                 <nav>
-                    <a data-scroll href="http://hectordolo.github.com/#home">
+                    <a data-scroll href="#home">
                         <p class="logo">Hector Dolo</p>
                     </a>
                     <ul>
