--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <li><a data-scroll href="#home">Home</a></li>
                         <li><a data-scroll href="#about">About</a></li>
                         <li><a data-scroll href="#interest">Interest</a></li>
+                        <li><a data-scroll href="#tools">Tools</a></li>
                     </ul>
                 </nav>
             </div>
@@ -78,6 +79,36 @@
             <p>I am also a self proclaimed graphic artist so sometimes I do design and upload them on <a href="https://www.teepublic.com/user/hectordolo">TeePublic</a>. I thought no one would buy one but I guess I am lucky someone bought 1 out of 30 designs, yehey an achievement for me.</p>
         </section>
 
+        <section id="tools" class="large">
+            <h1 class="title">Tools</h1>
+            <div class="row container" id="base64">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>Base 64 Encoder</h3>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <label>Text to Encode</label>
+                    <input type="text" id="text_to_encode" v-on:keyup="base64Encode" v-model="text_to_encode" class="form-control">
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <label>Encoded</label>
+                    <input type="text" id="encoded" v-model="encoded" class="form-control">
+                </div>
+                &nbsp;
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <h3>Base 64 Decoder</h3>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <label>Text to Decode</label>
+                    <input type="text" id="text_to_decode" v-on:keyup="base64Decode" v-model="text_to_decode" class="form-control">
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <label>Decoded</label>
+                    <input type="text" id="decoded" v-model="decoded" class="form-control">
+                </div>
+            </div>
+
+        </section>
+
         <script src="vendor/jquery-3/jquery-3.3.1.min.js"></script>
         <script src="vendor/bootstrap-4/js/bootstrap.min.js"></script>
         <script src="vendor/smooth-scroll/smooth-scroll.js"></script>
@@ -88,6 +119,24 @@
         <script>
 
             var scroll = new SmoothScroll('a[href*="#"]');
+
+            var base64 = new Vue({
+                el: '#base64',
+                data: {
+                    text_to_encode: '',
+                    encoded: '',
+                    text_to_decode: '',
+                    decoded: ''
+                },
+                methods: {
+                    base64Encode: function (event) {
+                        $("#encoded").val(btoa($('#text_to_encode').val()));
+                    },
+                    base64Decode: function () {
+                        $("#decoded").val(atob($('#text_to_decode').val()));
+                    },
+                }
+            });
 
 
         </script>
