--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 
         <section id="about" class="large">
             <h1 class="title">About</h1>
-            <p>I currently work as a ICT Supervisor at <a href="http://www.stjude.edu.ph/">St Jude College Dasmarinas Cavite Inc.</a>, wherein I aide the VP for ICT of the school in its digital transformation.</p>
-            <p>I am also a Partner and a Developer at <a href="http://www.qoreit.com/">QoreIT Business Solutions Inc.</a>, wherein we have partnered to different sectors in the industry to do process automation and provide value add to there business.</p>
+            <p>I am a Systems Developer doing projects at different kinds of industry that includes such as Education, Health, Transportation, BPO's, MLM's and the like mostly concentrated on SME's.</p>
             <hr>
             <p>Baguio City, Philippines, 2600 <span>|</span> +63 921 436 2827 <span>|</span> hectordolo@gmail.com</p>
             <div class="social-icons">
@@ -69,6 +68,9 @@
                 </a>
                 <a href="https://www.facebook.com/hdawgs">
                     <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.instagram.com/hd_random_pics/">
+                    <i class="fab fa-instagram"></i>
                 </a>
             </div>
         </section>
