--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section id="home" class="large">
             <div id="info">
-                <h1 id="greetings">Kumusta!</h1>
+                <h1 id="greetings">Whatsupp!</h1>
                 <hr>
                 <h2 id="message">I'm a DEV OPS operating in the shadows to make the world a better place. You can call me by my initials Haytch Dee!</h2>
             </div>
@@ -79,6 +79,7 @@
             <h1 class="title">Interest</h1>
             <p>When I have free time I do a lot of Marathons on Netflix.</p>
             <p>I am also a self proclaimed graphic artist so sometimes I do design and upload them on <a href="https://www.teepublic.com/user/hectordolo">TeePublic</a>. I thought no one would buy one but I guess I am lucky someone bought 1 out of 30 designs, yehey an achievement for me.</p>
+            <p>I aslo love to cook my own food and proclaim my self as a Chef :D visit my <a href="https://www.instagram.com/hd_random_pics/">Instagram</a> Page.</p>
         </section>
 
         <section id="tools" class="large">
