--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <a href="https://www.instagram.com/hd_random_pics/">
                     <i class="fab fa-instagram"></i>
                 </a>
+                <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ?view_as=subscriber">
+                    <i class="fab fa-youtube"></i>
+                </a>
             </div>
         </section>
 
@@ -79,7 +82,8 @@
             <h1 class="title">Interest</h1>
             <p>When I have free time I do a lot of Marathons on Netflix.</p>
             <p>I am also a self proclaimed graphic artist so sometimes I do design and upload them on <a href="https://www.teepublic.com/user/hectordolo">TeePublic</a>. I thought no one would buy one but I guess I am lucky someone bought 1 out of 30 designs, yehey an achievement for me.</p>
-            <p>I aslo love to cook my own food and proclaim my self as a Chef! Feel free to visit my <a href="https://www.instagram.com/hd_random_pics/">Instagram Page</a>.</p>
+            <p>I also love to cook my own food and proclaim my self as a Chef! Feel free to visit my <a href="https://www.instagram.com/hd_random_pics/">Instagram Page</a>.</p>
+            <p>I also started my own youtube channel posting some random stuffs of my experiences in life  <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ?view_as=subscriber">Instagram Page</a>.</p>
         </section>
 
         <section id="tools" class="large">
