--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section id="about" class="large">
             <h1 class="title">About</h1>
-            <p>I current work as an IT Specialist, wherein I do system implementation, support and maintenance. I also do freelance development if needed but I usually look for ready made solutions online that best suits my client's requirements and recomend it to them.</p>
+            <p>I current work as an IT Specialist doing projects in the different kinds of industry such as Education, Health, Transportation, BPO's, MLM's and the like, mostly concentrated on SME's. I usually do systems implementation, support and maintenance and also do freelance development if needed but I usually look for ready made solutions online that best suits my client's requirements and recomend it to them.</p>
             <hr>
             <p>Baguio City, Philippines, 2600 <span>|</span> +63 921 436 2827 <span>|</span> hectordolo@gmail.com</p>
             <div class="social-icons">
