--- a/index.html
+++ b/index.html
@@ -1,153 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="Hector Dolo">
-        <meta name="keywords" content="Web Developer">
+  <title>Hector Dolo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-        <title>Hector Dolo</title>
+  <!-- Favicons -->
+  <link href="favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-        <!-- Bootstrap Core CSS -->
-        <link href="vendor/bootstrap-4/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
-        <!-- Custom CSS -->
-        <link href="css/hd.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-        <link rel="shortcut icon" href="favicon.ico">
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 
-        <!-- Custom Fonts -->
-        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+</head>
 
-    </head>
+<body>
 
-    <body>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top header-transparent">
+    <div class="container">
 
-        <nav>
+      <div class="logo float-left">
+        <h1 class="text-light"><a href="index.html"><span>HD & Fam</span></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      </div>
 
-        </nav>
-        <header class="large">
-            <div class="container">
-                <nav>
-                    <a data-scroll href="#home">
-                        <p class="logo">Hector Dolo</p>
-                    </a>
-                    <ul>
-                        <li><a data-scroll href="#home">Home</a></li>
-                        <li><a data-scroll href="#about">About</a></li>
-                        <li><a data-scroll href="#interest">Interest</a></li>
-                        <li><a data-scroll href="#tools">Tools</a></li>
-                    </ul>
-                </nav>
+      <nav class="nav-menu float-right d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="drop-down"><a href="">Online Finds</a>
+            <ul>
+              <li><a href="online-finds/wfh-setup.html">WFH Setup</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav><!-- .nav-menu -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex justify-cntent-center align-items-center">
+    <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active">
+        <div class="carousel-container">
+          <h2 class="animate__animated animate__fadeInDown">Welcome!</h2>
+          <p class="animate__animated animate__fadeInUp">This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= Services Section ======= -->
+    <section class="services">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="icon-box icon-box-pink">
+              <div class="icon"><i class="bx bx-cloud"></i></div>
+              <h4 class="title"><a href="">Backend Development</a></h4>
+              <p class="description">Creation and maintenance of the server-side components that power web or mobile applications. It focuses on building the logic and functionality behind the scenes, enabling communication between the frontend (user interface) and the server, and handling data processing and storage.</p>
             </div>
-        </header>
+          </div>
 
-        <section id="home" class="large">
-            <div id="info">
-                <h1 id="greetings">Whatsupp!</h1>
-                <hr>
-                <h2 id="message">I'm a DEV OPS operating in the shadows to make the world a better place. You can call me by my initials Haytch Dee!</h2>
+          <div class="col-md-6 col-lg-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box icon-box-cyan">
+              <div class="icon"><i class="bx bxs-layout"></i></div>
+              <h4 class="title"><a href="">Frontend Development</a></h4>
+              <p class="description">Creation and maintenance the user-facing components of a web application. It involves writing code that defines the visual and interactive elements that users see and interact with directly. I can work closely with designers and backend developers to bring the application's user interface (UI) and user experience (UX) to life.</p>
             </div>
-        </section>
+          </div>
 
-        <section id="about" class="large">
-            <h1 class="title">About</h1>
-            <p>I current work as an IT Specialist doing projects in the different kinds of industry such as Education, Health, Transportation, BPO's, MLM's and the like, mostly concentrated on SME's. I usually do systems implementation, support and maintenance and also do freelance development if needed but I usually look for ready made solutions online that best suits my client's requirements and recomend it to them.</p>
-            <hr>
-            <p>Baguio City, Philippines, 2600 <span>|</span> +63 921 436 2827 <span>|</span> hectordolo@gmail.com</p>
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/hector-dolo-9b011129">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/hectordolo/">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.facebook.com/hdawgs">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="https://www.instagram.com/hd_random_pics/">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ?view_as=subscriber">
-                    <i class="fab fa-youtube"></i>
-                </a>
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="online-finds/wfh-setup.html">WFH Setup</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Backend Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Frontend Development</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h4>Contact Us</h4>
+            <p>
+              La Trinidid <br>
+              Benguet, 2601<br>
+              Philippines <br><br>
+              <strong>Phone:</strong> +63 921 436 2827<br>
+              <strong>Email:</strong> hectordolo@gmail.com<br>
+            </p>
+
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-info">
+            <h3>About HD & Fam</h3>
+            <p>This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+            <div class="social-links mt-3">
+              <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
+              <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/hd_random_pics/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/hector-dolo-384855279" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
-        </section>
+          </div>
 
-        <section id="interest" class="large">
-            <h1 class="title">Interest</h1>
-            <p>When I have free time I do a lot of Marathons on Netflix.</p>
-            <p>I am also a self proclaimed graphic artist so sometimes I do design and upload them on <a href="https://www.teepublic.com/user/hectordolo">TeePublic</a>. I thought no one would buy one but I guess I am lucky someone bought 1 out of 30 designs, yehey an achievement for me.</p>
-            <p>I also love to cook my own food and proclaim my self as a Chef! Feel free to visit my <a href="https://www.instagram.com/hd_random_pics/">Instagram Page</a>.</p>
-            <p>I also started my own youtube channel posting some random stuffs of my experiences in life  <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ?view_as=subscriber">Instagram Page</a>.</p>
-        </section>
+        </div>
+      </div>
+    </div>
 
-        <section id="tools" class="large">
-            <h1 class="title">Tools</h1>
-            <div class="row container" id="base64">
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h3>Base 64 Encoder</h3>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <label>Text to Encode</label>
-                    <input type="text" id="text_to_encode" v-on:keyup="base64Encode" v-model="text_to_encode" class="form-control">
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <label>Encoded</label>
-                    <input type="text" id="encoded" v-model="encoded" class="form-control">
-                </div>
-                &nbsp;
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h3>Base 64 Decoder</h3>
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <label>Text to Decode</label>
-                    <input type="text" id="text_to_decode" v-on:keyup="base64Decode" v-model="text_to_decode" class="form-control">
-                </div>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <label>Decoded</label>
-                    <input type="text" id="decoded" v-model="decoded" class="form-control">
-                </div>
-            </div>
+    <div class="container">
+      <div class="copyright">
+        <strong><span>HD & Fam</span></strong>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
-        </section>
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-        <script src="vendor/jquery-3/jquery-3.3.1.min.js"></script>
-        <script src="vendor/bootstrap-4/js/bootstrap.min.js"></script>
-        <script src="vendor/smooth-scroll/smooth-scroll.js"></script>
-        <script src="vendor/vuejs/vue.js"></script>
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/counterup/counterup.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
 
-        <script src="js/hd.js"></script>
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
-        <script>
-
-            var scroll = new SmoothScroll('a[href*="#"]');
-
-            var base64 = new Vue({
-                el: '#base64',
-                data: {
-                    text_to_encode: '',
-                    encoded: '',
-                    text_to_decode: '',
-                    decoded: ''
-                },
-                methods: {
-                    base64Encode: function (event) {
-                        $("#encoded").val(btoa($('#text_to_encode').val()));
-                    },
-                    base64Decode: function () {
-                        $("#decoded").val(atob($('#text_to_decode').val()));
-                    },
-                }
-            });
-
-
-        </script>
-
-    </body>
+</body>
 
 </html>
