--- a/online-finds/others.html
+++ b/online-finds/others.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HD & Fam - Others</title>
+  <title>HD & Fam - WFH Setup</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -65,11 +65,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>WFH Setup</h2>
+          <h2>Others</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
             <li>Online Finds</li>
-            <li>WFH Setup</li>
+            <li>Others</li>
           </ol>
         </div>
 
@@ -80,70 +80,26 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <p>Here are the list of the tools and equipments I have used and still using on my work as a web developer.</p>
+          <p>Here are the list of the things bought on-line that have been tested.</p>
         </div>
-
       </div>
     </section>
 
-    <!-- ======= Team Section ======= -->
-    <section class="team" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+    <section class="">
       <div class="container">
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img" style="height: 200px;">
-                <img src="../assets/img/online-finds/wfh-setup/m1-air.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>M1 Air</h4>
-                <span>Main Laptop</span>
-                <ul>
-                  <li><a href="https://invl.io/cliv2wm" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv2x2" target="_blank">Lazada PH</a></li>
-                </ul>
-                <p>The M1 Air is really helpful in my work as a developer, its the cheapest yet its a powerful development device for me as a Web Application Developer. Here is my <a href="https://youtu.be/ejzNkbshvlw" target="_blank">Youtube Unboxing</a>.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img" style="height: 200px;">
-                <img src="../assets/img/online-finds/wfh-setup/huawie-monitor.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Huawie MateView GT</h4>
-                <span>For Extended Monitor</span>
-                <ul>
-                  <li><a href="https://invl.io/cliv1wy" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv2ao" target="_blank">Lazada PH</a></li>
-                </ul>
-                <p>What I love about this monitor is the Type-C port for both Display and Charging best suited for my M1 Air with only 2 type c port. Here is my <a href="https://youtu.be/ZNnGNIuMQRk" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img" style="height: 200px;">
-                <img src="../assets/img/online-finds/wfh-setup/table.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Adjustable Ergonomic Desk</h4>
-                <span>Main Table</span>
-                <ul>
-                  <li><a href="https://invl.io/cliv3vz" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv3wk" target="_blank">Lazada PH</a></li>
-                </ul>
-                <p>Needed this table to avoid sitting for a long time during work hours.</p>
-              </div>
-            </div>
-          </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <ul>
+            <li>
+              Redmi Note 9 Pro
+              <ul>
+                <li><a href="https://invl.io/cliv51l">Case</a></li>
+                <li><a href="https://invl.io/cliv515">Tempered Glass</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
-    </section><!-- End Team Section -->
+    </section>
 
   </main><!-- End #main -->
 
