--- a/online-finds/wfh-setup.html
+++ b/online-finds/wfh-setup.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HD & Fam - Others</title>
-  <meta content="" name="description">
+  <title>Cheap WFH Setup</title>
+  <meta content="Cheap WFH Setup Equipments and Devices" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
