--- a/online-finds/others.html
+++ b/online-finds/others.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HD & Fam - WFH Setup</title>
+  <title>HD & Fam - General</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
