--- a/online-finds/wfh-setup.html
+++ b/online-finds/wfh-setup.html
@@ -94,7 +94,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img" style="height: 200px;">
-                <img src="../assets/img/online-finds/wfh-setup/m1-air.png" class="img-fluid" alt="">
+                <img src="../assets/img/online-finds/wfh-setup/m1-air.png" class="img-fluid" alt="Cheapest Mac Laptop">
               </div>
               <div class="member-info">
                 <h4>M1 Air</h4>
@@ -138,6 +138,23 @@
                   <li><a href="https://invol.co/cliv3wk" target="_blank">Lazada PH</a></li>
                 </ul>
                 <p>Needed this table to avoid sitting for a long time during work hours.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/table.png" class="img-fluid" alt="Ofix Deluxe-D57 XTM Full Mesh Chair with Seat Slide">
+              </div>
+              <div class="member-info">
+                <h4>Ofix Deluxe-D57 XTM Full Mesh Chair with Seat Slide</h4>
+                <span>Ergonomic Chair</span>
+                <ul>
+                  <li><a href="https://invl.io/clivmw3" target="_blank">Shopee PH</a></li>
+                  <li><a href="https://invol.co/clivmwd" target="_blank">Lazada PH</a></li>
+                </ul>
+                <p>With a focus on optimizing your well-being and enhancing your productivity, this chair is a game-changer for your workspace.</p>
               </div>
             </div>
           </div>
