--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome!</h2>
-          <p class="animate__animated animate__fadeInUp">This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+          <h2 class="animate__animated animate__fadeInDown">Welcome to the Web Development Wonderland of HD</h2>
+          <p class="animate__animated animate__fadeInUp">Step into a world where lines of code come alive, and digital dreams become reality. I'm thrilled to have you on my personal website, where I showcase my passion for web development and all other things.</p>
         </div>
       </div>
 
