--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to the Web Development Wonderland of HD</h2>
+          <h2 class="animate__animated animate__fadeInDown">Welcome to the <br>Web Development Wonderland of HD</h2>
           <p class="animate__animated animate__fadeInUp">Step into a world where lines of code come alive, and digital dreams become reality. I'm thrilled to have you on my personal website, where I showcase my passion for web development and all other things.</p>
         </div>
       </div>
