--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
             <div class="portfolio-item">
               <img src="assets/img/portfolio/img-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/img-2.png" data-gall="portfolioGallery" class="venobox" title="QoreMed">QoreMed.</a></h3>
+                <h3><a href="assets/img/portfolio/img-2.png" data-gall="portfolioGallery" class="venobox" title="QoreMed">QoreMed</a></h3>
                 <div>
                   <a href="assets/img/portfolio/img-2.png" data-gall="portfolioGallery" class="venobox" title="QoreMed"><i class="bx bx-plus"></i></a>
                   <a href="https://qoremed.com/" title="QoreMed" target="_blank"><i class="bx bx-link"></i></a>
@@ -126,7 +126,7 @@
             <div class="portfolio-item">
               <img src="assets/img/portfolio/img-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/img-3.png" data-gall="portfolioGallery" class="venobox" title="Byaherong Pinoy">Byaherong Pinoy.</a></h3>
+                <h3><a href="assets/img/portfolio/img-3.png" data-gall="portfolioGallery" class="venobox" title="Byaherong Pinoy">Byaherong Pinoy</a></h3>
                 <div>
                   <a href="assets/img/portfolio/img-3.png" data-gall="portfolioGallery" class="venobox" title="Byaherong Pinoy"><i class="bx bx-plus"></i></a>
                   <a href="https://byaherongpinoy.com/" title="Byaherong Pinoy" target="_blank"><i class="bx bx-link"></i></a>
