--- a/online-finds/others.html
+++ b/online-finds/others.html
@@ -131,6 +131,36 @@
       </div>
     </section>
 
+    <section class="">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <ul>
+            <li>
+              Watch Brace Adjuster
+              <ul>
+                <li><a href="https://invl.io/clj4dgr">Shopee PH</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="">
+      <div class="container">
+        <div class="d-flex justify-content-between align-items-center">
+          <ul>
+            <li>
+              Nose Trimmer
+              <ul>
+                <li><a href="https://invl.io/clj4dj4">Shopee PH</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main><!-- End #main -->
 
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
