Updated Website Logo

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>HD & Fam</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Hector Dolo</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -53,11 +53,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
           <li class="active"><a href="portfolio.html">Portfolio</a></li>
-          <li class="drop-down"><a href="">Online Finds</a>
-            <ul>
-              <li><a href="online-finds/wfh-setup.html">WFH Setup</a></li>
-            </ul>
-          </li>
+          <li><a href="wfh-setup.html">WFH Setup</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
