--- a/wfh-setup.html
+++ b/wfh-setup.html
@@ -17,16 +17,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="../assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -37,21 +37,17 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="../index.html"><span>Hector Dolo</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Hector Dolo</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../services.html">Services</a></li>
-          <li><a href="../portfolio.html">Portfolio</a></li>
-          <li class="drop-down"><a href="">Online Finds</a>
-            <ul>
-              <li class="active"><a href="wfh-setup.html">WFH Setup</a></li>
-            </ul>
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li class="active"><a href="wfh-setup.html">WFH Setup</a></li>
         </ul>
       </nav>
 
@@ -80,7 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <p>Here are the list of the tools and equipments I have used and still using on my work as a web developer.</p>
+          <p>Here are the list of the hardware or equipments I am using on my work as a web developer.</p>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <p>These things are all bought in <a href="https://shope.ee/3AghnnZj75">ShopeePH</a> an E-Commerce Platform active in the South East Asia.</p>
         </div>
 
       </div>
@@ -100,8 +99,7 @@
                 <h4>M1 Air</h4>
                 <span>Main Laptop</span>
                 <ul>
-                  <li><a href="https://invl.io/cliv2wm" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv2x2" target="_blank">Lazada PH</a></li>
+                  <li><a href="https://shope.ee/9euBY7aote" target="_blank">Shopee PH</a></li>
                 </ul>
                 <p>The M1 Air is really helpful in my work as a developer, its the cheapest yet its a powerful development device for me as a Web Application Developer. Here is my <a href="https://youtu.be/ejzNkbshvlw" target="_blank">Youtube Unboxing</a>.</p>
               </div>
@@ -117,8 +115,7 @@
                 <h4>Huawie MateView GT</h4>
                 <span>For Extended Monitor</span>
                 <ul>
-                  <li><a href="https://invl.io/cliv1wy" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv2ao" target="_blank">Lazada PH</a></li>
+                  <li><a href="https://shope.ee/LMWR2qjTr" target="_blank">Shopee PH</a></li>
                 </ul>
                 <p>What I love about this monitor is the Type-C port for both Display and Charging best suited for my M1 Air with only 2 type c port. Here is my <a href="https://youtu.be/ZNnGNIuMQRk" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
               </div>
@@ -134,10 +131,9 @@
                 <h4>Adjustable Ergonomic Desk</h4>
                 <span>Main Table</span>
                 <ul>
-                  <li><a href="https://invl.io/cliv3vz" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/cliv3wk" target="_blank">Lazada PH</a></li>
+                  <li><a href="https://shope.ee/LMWR9jZe5" target="_blank">Shopee PH</a></li>
                 </ul>
-                <p>Needed this table to avoid sitting for a long time during work hours.</p>
+                <p>Needed this table to avoid sitting for a long time during work hours. This is a generic table but I think this is a superb product. The packaging is great that the table is protected when it is transported. Here is my <a href="https://youtu.be/8U-T6cM43DI?si=Go8k9lL1o2pDcDnC" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
               </div>
             </div>
           </div>
@@ -151,13 +147,45 @@
                 <h4>Ofix Deluxe-D57 XTM Full Mesh Chair with Seat Slide</h4>
                 <span>Ergonomic Chair</span>
                 <ul>
-                  <li><a href="https://invl.io/clivmw3" target="_blank">Shopee PH</a></li>
-                  <li><a href="https://invol.co/clivmwd" target="_blank">Lazada PH</a></li>
+                  <li><a href="https://shope.ee/2fkRDW8PWB" target="_blank">Shopee PH</a></li>
                 </ul>
-                <p>With a focus on optimizing your well-being and enhancing your productivity, this chair is a game-changer for your workspace.</p>
+                <p>With a focus on optimizing your well-being and enhancing your productivity, this chair is a game-changer for your workspace. Specifically it helps a lot cause I have lower lumbar instability. Here is my <a href="https://youtu.be/VJTfC_c1EzQ?si=O9qmGd8u1JNFUfai" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/bavin.png" class="img-fluid" alt="Ofix Deluxe-D57 XTM Full Mesh Chair with Seat Slide">
+              </div>
+              <div class="member-info">
+                <h4>BAVIN I3 7in1 </h4>
+                <span>Type-C Hub</span>
+                <ul>
+                  <li><a href="https://shope.ee/9pDbkwA82Q" target="_blank">Shopee PH</a></li>
+                </ul>
+                <p>This is very useful specifically because the M1 Air has a limited 2 type-c slot. Here is my <a href="https://youtu.be/qt9wqe2i21k?si=A5wUgAY9BrpfMNIH" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/samsung.png" class="img-fluid" alt="Ofix Deluxe-D57 XTM Full Mesh Chair with Seat Slide">
+              </div>
+              <div class="member-info">
+                <h4>Samsung Portable SSD T7 Shield USB 3.2 1TB</h4>
+                <span>External Storage</span>
+                <ul>
+                  <li><a href="https://shope.ee/9UalMqTL1c" target="_blank">Shopee PH</a></li>
+                </ul>
+                <p>Currently my M1 Air has only the base storage of 256 so I opt in having an external device with larger capacity which is the Samsung T7.</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section><!-- End Team Section -->
@@ -198,11 +226,11 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About HD & Fam</h3>
-            <p>This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+            <h3>About HD</h3>
+            <p>This is HD. I share anything that is useful for me that might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
-              <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/RHYZFamChronicles" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/hd_random_pics/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/hector-dolo-384855279" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
@@ -215,19 +243,19 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
-  <script src="../assets/vendor/venobox/venobox.min.js"></script>
-  <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="../assets/vendor/counterup/counterup.min.js"></script>
-  <script src="../assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/counterup/counterup.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
