--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="online-finds/wfh-setup.html">WFH Setup</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="wfh-setup.html">WFH Setup</a></li>
             </ul>
           </div>
 
@@ -129,7 +129,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              La Trinidid <br>
+              La Trinidad <br>
               Benguet, 2601<br>
               Philippines <br><br>
               <strong>Phone:</strong> +63 921 436 2827<br>
@@ -140,7 +140,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>About HD & Fam</h3>
-            <p>This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+            <p>This is HD. I will share anything that was useful to me and that might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
               <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
@@ -155,7 +155,7 @@
 
     <div class="container">
       <div class="copyright">
-        <strong><span>HD & Fam</span></strong>
+        <strong><span>Hector Dolo</span></strong>
       </div>
     </div>
   </footer>
