--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              La Trinidid <br>
+              La Trinidad <br>
               Benguet, 2601<br>
               Philippines <br><br>
               <strong>Phone:</strong> +63 921 436 2827<br>
@@ -172,7 +172,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>About HD & Fam</h3>
-            <p>This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
+            <p>This is HD. I will share anything that was useful to me and that might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
               <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
@@ -187,7 +187,7 @@
 
     <div class="container">
       <div class="copyright">
-        <strong><span>HD & Fam</span></strong>
+        <strong><span>Hector Dolo</span></strong>
       </div>
     </div>
   </footer>
