--- a/wfh-setup.html
+++ b/wfh-setup.html
@@ -50,7 +50,6 @@
           <li class="active"><a href="wfh-setup.html">WFH Setup</a></li>
         </ul>
       </nav>
-
     </div>
   </header><!-- End Header -->
 
@@ -64,7 +63,6 @@
           <h2>WFH Setup</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
-            <li>Online Finds</li>
             <li>WFH Setup</li>
           </ol>
         </div>
@@ -208,15 +206,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services.html">Backend Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="../services.html">Frontend Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Backend Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Frontend Development</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              La Trinidid <br>
+              La Trinidad <br>
               Benguet, 2601<br>
               Philippines <br><br>
               <strong>Phone:</strong> +63 921 436 2827<br>
@@ -226,19 +224,24 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About HD</h3>
-            <p>This is HD. I share anything that is useful for me that might be useful for you or someone.</p>
+            <h3>About HD & Fam</h3>
+            <p>This is HD. I will share anything that was useful to me and that might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
-              <a href="https://www.facebook.com/RHYZFamChronicles" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/hd_random_pics/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/hector-dolo-384855279" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
-
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="copyright">
+        <strong><span>Hector Dolo</span></strong>
+      </div>
+    </div>
+  </footer>
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
