Added Fitness Page and Links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Hector Dolo</title>
-  <meta content="Hector Dolo" name="description">
-  <meta content="" name="keywords">
+  <meta content="Hector Dolo, Hector Sapalit Dolo, Laravel Developer, PHP Developer, Javascript Developer, jQuery Developer" name="description">
+  <meta content="hector, dolo, web development, laravel developer, frontend development, backend development, frontend, backend, jquery developer, javascript developer, php developer" name="keywords">
 
   <!-- Favicons -->
   <link href="favicon.png" rel="icon">
