--- a/wfh-setup.html
+++ b/wfh-setup.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Cheap WFH Setup</title>
-  <meta content="Cheap WFH Setup Equipments and Devices" name="description">
-  <meta content="" name="keywords">
+  <meta content="Cheap WFH Setup Equipments and Devices, Cheap Desk Ideas, Cheap Work Setup" name="description">
+  <meta content="multi-monitor setup, desk workstation ideas, cheap work station, cheap wfh setup, wfh desk ideas, monitor mount, triple display monitor" name="keywords">
 
   <!-- Favicons -->
   <link href="../favicon.png" rel="icon">
@@ -79,7 +79,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <p>Here are the list of the hardware or equipments I am using on my work as a web developer.</p>
+          <p>Here are the list of the hardware or equipments I have used and still using on my work as a web developer and that I also recommend.</p>
         </div>
         <div class="d-flex justify-content-between align-items-center">
           <p>These things are all bought in <a href="https://shope.ee/3AghnnZj75">ShopeePH</a> an E-Commerce Platform active in the South East Asia.</p>
@@ -185,6 +185,54 @@
                   <li><a href="https://shope.ee/9UalMqTL1c" target="_blank">Shopee PH</a></li>
                 </ul>
                 <p>Currently my M1 Air has only the base storage of 256 so I opt in having an external device with larger capacity which is the Samsung T7.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img text-center" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/nb.png" height="200px" width="250px" alt="Monitor Mount">
+              </div>
+              <div class="member-info">
+                <h4>NB H80</h4>
+                <span>Single Monitor Mount for 17 to 27 inches</span>
+                <ul>
+                  <li><a href="https://shope.ee/3L0AXm1qmu" target="_blank">Shopee PH</a></li>
+                </ul>
+                <p>This is used to arrange my displays when I have a triple monitor display, this is also helpful if you don't want your monitor to be placed on your table.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img text-center" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/benq.png" height="200px" width="250px" alt="BenQ Monitor">
+              </div>
+              <div class="member-info">
+                <h4>BenQ Monitor</h4>
+                <span>For Extended Monitor</span>
+                <ul>
+                  <li><a href="https://shope.ee/9pDeNNOyqq" target="_blank">Shopee PH</a></li>
+                </ul>
+                <p>I got 2 of these when I am still using the MacBook Pro intel version that can support up to 2 external displays.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img text-center" style="height: 200px;">
+                <img src="../assets/img/online-finds/wfh-setup/wavlink.png" height="200px" width="250px" alt="Wavlink USB to HDMI">
+              </div>
+              <div class="member-info">
+                <h4>Wavlink USB to HDMI Adapter</h4>
+                <span>To Use the Extended Monitor Using USB Port</span>
+                <ul>
+                  <li><a href="https://shope.ee/fzPPkAdHd" target="_blank">Shopee PH</a></li>
+                </ul>
+                <p>I got this when I am using the USB port of my windows and macbook laptop with this I am able to extend my macbook intel powered to triple extended display. Here is my <a href="https://youtu.be/LPNAYr-AJY4?si=OoSgxVhgso54eUJT" target="_blank">Youtube Unboxing and Simple Review</a>.</p>
               </div>
             </div>
           </div>
