--- a/services.html
+++ b/services.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>HD Services</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Backend Developer, Frontend Developer" name="description">
+  <meta content="backend developer, frontend developer, laravel developer, javascript developer, php developer, web developer" name="keywords">
 
   <!-- Favicons -->
   <link href="favicon.png" rel="icon">
@@ -25,15 +25,8 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Moderna - v2.2.1
-  * Template URL: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
