Added Fitness Page and Links

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,55 +77,81 @@
     </section><!-- End Our Portfolio Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section class="portfolio">
+    <section class="portfolio team">
       <div class="container">
 
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web-application">Web Application</li>
+              <li data-filter=".filter-web-site">Website</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-          <div class="col-lg-4 col-md-6 filter-web">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/img-1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/img-1.png" data-gall="portfolioGallery" class="venobox" title="QoreIT">QoreIT Inc.</a></h3>
-                <div>
-                  <a href="assets/img/portfolio/img-1.png" data-gall="portfolioGallery" class="venobox" title="QoreIT"><i class="bx bx-plus"></i></a>
-                  <a href="https://qoreit.com/" title="QoreIT" target="_blank"><i class="bx bx-link"></i></a>
-                </div>
+          <div class="col-lg-4 col-md-6 filter-web-application">
+            <div class="member">
+              <div class="member-info">
+                <h4>Project Mercury <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
+                <span style="font-size: 16px;">Distribution Industry</span>
+                <p class="text-justify mt-4">This is an Inventory and Management System that is developed in Laravel, this facilitate the efficient tracking, control and organization of the client's inventory. The primary purpose of this web application is to optimize inventory levels, streamline order fulfillment, and enhance overall operational efficiency. </p>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 filter-web">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/img-2.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/img-2.png" data-gall="portfolioGallery" class="venobox" title="QoreMed">QoreMed</a></h3>
-                <div>
-                  <a href="assets/img/portfolio/img-2.png" data-gall="portfolioGallery" class="venobox" title="QoreMed"><i class="bx bx-plus"></i></a>
-                  <a href="https://qoremed.com/" title="QoreMed" target="_blank"><i class="bx bx-link"></i></a>
-                </div>
+          <div class="col-lg-4 col-md-6 filter-web-application">
+            <div class="member">
+              <div class="member-info">
+                <h4>Project Asclepius <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
+                <span style="font-size: 16px;">Health Industry</span>
+                <p class="text-justify mt-4">This is a Laboratory and Diagnostic System that is designed to streamline the patient, administrative and clinical operations of the healthcare facility. It aims to enhance the efficiency of healthcare services by automating various tasks, improving patient care, and providing tools for better management. Key features include patient management, appointment scheduling, medical records management, billing, and reporting functionalities.</p>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 filter-web">
-            <div class="portfolio-item">
-              <img src="assets/img/portfolio/img-3.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h3><a href="assets/img/portfolio/img-3.png" data-gall="portfolioGallery" class="venobox" title="Byaherong Pinoy">Byaherong Pinoy</a></h3>
-                <div>
-                  <a href="assets/img/portfolio/img-3.png" data-gall="portfolioGallery" class="venobox" title="Byaherong Pinoy"><i class="bx bx-plus"></i></a>
-                  <a href="https://byaherongpinoy.com/" title="Byaherong Pinoy" target="_blank"><i class="bx bx-link"></i></a>
-                </div>
+          <div class="col-lg-4 col-md-6 filter-web-application">
+            <div class="member">
+              <div class="member-info">
+                <h4>Project Tenjin <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
+                <span style="font-size: 16px;">Education Industry</span>
+                <p class="text-justify mt-4">This is a School Management System that facilitates the efficient management and organization of various administrative, academic, and communication processes within an educational institution. It is designed to streamline day-to-day operations, enhance communication between stakeholders, and provide tools for data-driven decision-making.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 filter-web-site">
+            <div class="member">
+              <div class="member-info">
+                <h4>QoreIT <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
+                <span style="font-size: 16px;">IT Industry</span>
+                <p class="text-justify mt-4">This is a website of <a href="https://qoreit.com/">QoreIT Inc.</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 filter-web-site">
+            <div class="member">
+              <div class="member-info">
+                <h4>QoreIT <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
+                <span style="font-size: 16px;">IT Industry</span>
+                <p class="text-justify mt-4">This is a website of <a href="https://qoreit.com/">QoreIT Inc.</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 filter-web-site">
+            <div class="member">
+              <div class="member-info">
+                <h4>QoreMed <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
+                <span style="font-size: 16px;">Health Industry</span>
+                <p class="text-justify mt-4">This is a website of <a href="https://qoremed.com/">QoreMed</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 filter-web-site">
+            <div class="member">
+              <div class="member-info">
+                <h4>Byaherong Pinoy <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
+                <span style="font-size: 16px;">Transport Industry</span>
+                <p class="text-justify mt-4">This is a website of <a href="https://byaherongpinoy.com/">Byaherong Pinoy</a></p>
               </div>
             </div>
           </div>
