--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
               <div class="member-info">
                 <h4>QoreIT <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
                 <span style="font-size: 16px;">IT Industry</span>
-                <p class="text-justify mt-4">This is a website of <a href="https://qoreit.com/">QoreIT Inc.</a>. An IT Service Provider based in the Philippines.</p>
+                <p class="text-justify mt-4">This is a website of <a href="https://qoreit.com/" target="_blank">QoreIT Inc.</a>. An IT Service Provider based in the Philippines.</p>
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
               <div class="member-info">
                 <h4>QoreMed <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
                 <span style="font-size: 16px;">Health Industry</span>
-                <p class="text-justify mt-4">This is a website of <a href="https://qoremed.com/">QoreMed</a>. This is an IT Service Provider focused on the Health Industry.</p>
+                <p class="text-justify mt-4">This is a website of <a href="https://qoremed.com/" target="_blank">QoreMed</a>. This is an IT Service Provider focused on the Health Industry.</p>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
               <div class="member-info">
                 <h4>Byaherong Pinoy <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Website)</i></h4>
                 <span style="font-size: 16px;">Transport Industry</span>
-                <p class="text-justify mt-4">This is a website of <a href="https://byaherongpinoy.com/">Byaherong Pinoy</a>. This is an IT Service Provider focused on providing applications in the transport and logistics sector.</p>
+                <p class="text-justify mt-4">This is a website of <a href="https://byaherongpinoy.com/" target="_blank">Byaherong Pinoy</a>. This is an IT Service Provider focused on providing applications in the transport and logistics sector.</p>
               </div>
             </div>
           </div>
