--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
               <div class="member-info">
                 <h4>Project Mercury <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
                 <span style="font-size: 16px;">Distribution Industry</span>
-                <p class="text-justify mt-4">This is an Inventory and Management System that is developed in Laravel, this facilitate the efficient tracking, control and organization of the client's inventory. The primary purpose of this web application is to optimize inventory levels, streamline order fulfillment, and enhance overall operational efficiency. </p>
+                <p class="text-justify mt-4">This is an Inventory and Management System that is developed in Laravel, this facilitates the efficient tracking, control and organization of the client's inventory. The primary purpose of this web application is to optimize inventory levels, streamline order fulfillment, and enhance overall operational efficiency. </p>
               </div>
             </div>
           </div>
@@ -113,7 +113,7 @@
           <div class="col-lg-4 col-md-6 filter-web-application">
             <div class="member">
               <div class="member-info">
-                <h4>Project Tenjin <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
+                <h4>Project Athena <i style="font-weight: normal!important; font-style: normal!important; font-size: 16px;">(Web Application)</i></h4>
                 <span style="font-size: 16px;">Education Industry</span>
                 <p class="text-justify mt-4">This is a School Management System that facilitates the efficient management and organization of various administrative, academic, and communication processes within an educational institution. It is designed to streamline day-to-day operations, enhance communication between stakeholders, and provide tools for data-driven decision-making.</p>
               </div>
@@ -191,7 +191,7 @@
             <p>This is HD. I will share anything that was useful to me and that might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
-              <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/RHYZFamChronicles" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/hd_random_pics/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/hector-dolo-384855279" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
