--- a/useful-things/fitness.html
+++ b/useful-things/fitness.html
@@ -235,7 +235,7 @@
             <p>This is HD & Fam. We we will share anything that was useful for us and might be useful for you or someone.</p>
             <div class="social-links mt-3">
               <a href="https://www.youtube.com/channel/UCt-N5jhaIbmwzvu2fbxSdMQ" class="youtube" target="_blank"><i class="bx bxl-youtube"></i></a>
-              <a href="https://www.facebook.com/HDRandomPosts" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.facebook.com/RHYZFamChronicles" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/hd_random_pics/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/in/hector-dolo-384855279" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
             </div>
